--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "animate.css": "^4.1.1",
+    "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
+    "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
     "html2canvas": "^1.4.1",
